[tool.poetry]
name = "battleshipgame"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Perun <kosperun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
perflint = "^0.7.3"
ipython = "^8.4.0"
black = "^22.6.0"
pre-commit = "^2.20.0"
pylint = "^2.14.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
